--- a/AppAndroidWS/Consulta _Actualizacion_Coaxial.Android.csproj
+++ b/AppAndroidWS/Consulta _Actualizacion_Coaxial.Android.csproj
@@ -55,7 +55,7 @@
     <AotAssemblies>false</AotAssemblies>
     <EnableLLVM>false</EnableLLVM>
     <BundleAssemblies>false</BundleAssemblies>
-    <AndroidSupportedAbis>armeabi-v7a;x86</AndroidSupportedAbis>
+    <AndroidSupportedAbis>armeabi;armeabi-v7a;x86;arm64-v8a</AndroidSupportedAbis>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activities\MapActivity.cs" />
+    <Compile Include="FragmentsActivities\ConsultarNap.cs" />
     <Compile Include="FragmentsActivities\ConsultarTap.cs" />
     <Compile Include="Interface\IRepositorioTFM.cs" />
     <Compile Include="REST\ActualTap.cs" />
@@ -74,6 +75,9 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="REST\Client.cs" />
+    <Compile Include="REST\ConsultarCoNAP.cs" />
+    <Compile Include="REST\ConsultarCoTAP.cs" />
+    <Compile Include="REST\ConsultarNapTecnico.cs" />
     <Compile Include="REST\InsertarTap.cs" />
     <Compile Include="REST\RestGeneric.cs" />
     <Compile Include="REST\TagService.cs" />
@@ -159,6 +163,12 @@
     <AndroidResource Include="Resources\layout\map.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\Fragment_ConsultarNap.axml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Icono_Ubicacion.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
