--- a/AppAndroidWS/Properties/AndroidManifest.xml
+++ b/AppAndroidWS/Properties/AndroidManifest.xml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1" package="g_g.une_etp" android:installLocation="auto" android:versionCode="11">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="g_g.une_etp" android:installLocation="auto" android:versionCode="16" android:versionName="1.6">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.INTERNET" android:required="true" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:required="true" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:required="true" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:required="true" />
 	<uses-permission android:name="android.permission.LOCATION_HARDWARE" />
 	<uses-feature android:name="android.hardware.location" android:required="true" />
 	<uses-feature android:name="android.hardware.location.gps" android:required="true" />
